start the tomcat

--- a/tomcat-users.xml.j2
+++ b/tomcat-users.xml.j2
@@ -1,4 +1,4 @@
 
 <tomcat-users>
-    <user username="{{ username }}" password="{{ password }}" roles="manager-gui,admin-gui"/>
+    <user username="{{ username_tomcat }}" password="{{ password }}" roles="manager-gui,admin-gui"/>
 </tomcat-users>
