--- a/tomcat-users.xml.j2
+++ b/tomcat-users.xml.j2
@@ -1,4 +1,4 @@
 
 <tomcat-users>
-    <user username= "{{ tomcat_admin_username }}" password= "{{ tomcat_admin_password }}" roles="manager-gui,admin-gui"/>
+    <user username={{ tomcat_admin_username }} password={{ tomcat_admin_password }} roles="manager-gui,admin-gui"/>
 </tomcat-users>
