--- a/tomcat.service.j2
+++ b/tomcat.service.j2
@@ -15,8 +15,8 @@ Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./
 ExecStart={{ tomcat_start }}
 ExecStop={{ tomcat_stop }}
 
-User={{ username }}
-Group={{ username }}
+User=username
+Group=username
 UMask=0007
 RestartSec=10
 Restart=always
