--- a/tomcat.service.j2
+++ b/tomcat.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 
-Environment=JAVA_HOME={{ java_path }}
+Environment="JAVA_HOME={{ java_path }}"
 Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
 Environment=CATALINA_HOME={{ username }}
 Environment=CATALINA_BASE={{ username }}
