--- a/tomcat-users.xml.j2
+++ b/tomcat-users.xml.j2
@@ -1,3 +1,3 @@
 <tomcat-users>
-    <user username="{{ qtdevops }}" password="{{ qtdevops@123 }}" roles="manager-gui,admin-gui"/>
+    <user username="{{ tomcat_admin_username }}" password="{{ tomcat_admin_password }}" roles="manager-gui,admin-gui"/>
 </tomcat-users>
