new password adding

--- a/tomcat-users.xml.j2
+++ b/tomcat-users.xml.j2
@@ -15,7 +15,9 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-
-<tomcat-users>
-    <user username="{{ tomcat_admin_username }}" password="{{ tomcat_admin_password }}" roles="manager-gui,admin-gui"/>
+<tomcat-users xmlns="http://tomcat.apache.org/xml"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://tomcat.apache.org/xml tomcat-users.xsd"
+              version="1.0">
+    <user username="{{ tomcat_admin_username }}" password="{{ tomcat_admin_password }}" roles="{{ tomcat_admin_roles | join(',')}}"/>
 </tomcat-users>
