new password adding

--- a/tomcat.service.j2
+++ b/tomcat.service.j2
@@ -15,7 +15,7 @@ Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./
 ExecStart=/opt/tomcat/bin/startup.sh
 ExecStop=/opt/tomcat/bin/shutdown.sh
 
-User=tomcat
+User={{ username }}
 Group=tomcat
 UMask=0007
 RestartSec=10
