--- a/tomcat.service.j2
+++ b/tomcat.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 
-Environment=JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+Environment=JAVA_HOME={{ java_path }}
 Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
 Environment=CATALINA_HOME=/opt/tomcat
 Environment=CATALINA_BASE=/opt/tomcat
@@ -15,8 +15,8 @@ Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./
 ExecStart=/opt/tomcat/bin/startup.sh
 ExecStop=/opt/tomcat/bin/shutdown.sh
 
-User=tomcat
-Group=tomcat
+User={{ username }}
+Group={{ groupname }}
 UMask=0007
 RestartSec=10
 Restart=always
